# zmq-scratch

./: .#.gitignore  .gitignore  CMakeLists.txt  README.md  multipart.h  utility.h  zhelpers.h
bcast/: ipcbcast.cpp
encryption/: crypto-client.cpp  crypto-server.cpp  sodium-test.cpp  sodium-util.h
filetransfer/: fastff.cpp  file-receive.cpp  file-send.cpp  launchtransfer.sh
multi-part/: pub.cpp  pub2.cpp  send-recv.h  sub.cpp  sub2.cpp
peer-brokers/: peering.cpp  peering2.cpp
pubsub/: pub-benchmark.cpp  pub.cpp  sub-benchmark.cpp  sub.cpp
reliable-req-rep/: lazy-pirate.cpp  paranoid-pirate-broker.cpp  paranoid-pirate-worker.cpp  simple-pirate-broker.cpp  simple-pirate-client.cpp  simple-pirate-worker.cpp
router/: lbbroker.cpp  load-balancer.cpp
router-dealer/: asyncsrv.c  asyncsrv.cpp
router-envelope/: router-sync.cpp  router.cpp
scratch/: tuple.cpp
simple/: launchhw.sh  router-dealer.cpp  simple-client.cpp  simple-client.cpp~  simple-server.cpp
stream/: socket-client.cpp  socket-client.py  stream-server.cpp
zcf/: AsyncReqRepStream.h  RAWInOutStreamTest.cpp  RAWInOutStreamTestTCP.cpp  RAWInStream.h  RAWOutStream.h  RMIScratch.cpp  RPCScratch.cpp  RPCScratch.cpp.cpp  Serialize.h  SerializerTest.cpp
